# gof2-vita

./: .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
lib/so_util/: so_util.c  so_util.h
livearea/: template.xml
loader/: config.h  dynlib.c  dynlib.h  falsojni_impl.c  main.c  main.h  patch.c  patch.h
loader/AFakeNative/: AAssetManager.h  AConfiguration.cpp  AConfiguration.h  AFakeNative.h  AFakeNative_Utils.cpp  AFakeNative_Utils.h  AInput.cpp  AInput.h  ALooper.cpp  ALooper.h  ANativeActivity.cpp  ANativeActivity.h  ANativeWindow.cpp  ANativeWindow.h  ASensor.cpp  ASensor.h  PseudoEpoll.cpp  PseudoEpoll.h  native_app_glue.h
loader/AFakeNative/utils/: controls.cpp  controls.h  sensors.cpp  sensors.h
loader/configurator/: main.cpp
loader/patch/: apk_hook.c  controls_fix.c  quit_fix.c  screen_fix.c
loader/reimpl/: controls.c  controls.h  env.c  io.c  io.h  log.c  pthr.c  pthr.h  sys.c  sys.h
loader/utils/: dialog.c  glutil.c  glutil.h  init.c  init.h  logger.c  logger.h  settings.c  settings.h  utils.c  utils.h
shaders/: compile.py
shaders/cg/: 013702774323DB398E32906D9E34E5BEE74F2277.cg  055B98AFAA4D1CF555273BF24A9B7E6BAC11F2A1.cg  07395F561A367D286E002B2F3A15D80FC7740662.cg  111F8D148D5EFD517155DD0EB39E2E6A60F34F33.cg  1887313FEBC71E5125956781D5A93721D12EF139.cg  1C1E9DF410B7C6C9913DE016FA52D6E2C255312A.cg  1ECC71557B67B21F7EF6523B8392A53B00C0B857.cg  1F38548CF1147108616EB9D2F22A446A6D8B3E6F.cg  35F2321364838669AF52201BB354CEA05FCF5B55.cg  4128248C766A9C1BFB3A5733AB0CD6A6F08AB1D6.cg  419359CA04694DA90AFE92653FE527BE73EF1517.cg  50B3DC233A995709A28FAA086D421A245F165DEE.cg  777103F7FFF524B4FC170F571F65A7B4ACCC3EF8.cg  799DA16FC1B3EB3CC9277B240C7A61BC4EF23E28.cg  7CB8D56EF3B96E21D96114C57CF78CC18BF24DB9.cg  8375AFFC6B4E6F6DF2AE0849399FEABF8591E0B2.cg  8F3DC2CD2DED13ADC117DC8237C42D636BCFA819.cg  9B1D12ED249964BF2F591E45E3DDF3B9ABDE8A79.cg  9F1CCD356E1F97F78446E319831B9692FE92E951.cg  AB9121DEEAF18321A72605F2AA3AFB88B4B4C55B.cg  B473A043892D55E46338D35B1FE47322B2DBA0EB.cg  B68ECE5B685A42BDB4688FB958677190C5A2E981.cg  B726C3961394A4601B2D0E84791B41D1C1A18C80.cg  BumpShader.frag  BumpShader.vert  BumpShaderV2.frag  BumpShaderV2.vert  BumpShaderV3.frag  BumpShaderV4.frag  C4D11CCCD95599EA681A2617DE35C647326A27F7.cg  CCF0770CC6148E50E51BCFE7D6A66320DFB8DDDA.cg  D2083A2072A61806B545E3D0BCFEDAAD7C365342.cg  D3A1C022BA02718E4F468ED49DFCDD1D9B2412C1.cg  ECD299F29A4B08B4AB058A856D2A6AC38CE69E1E.cg  F2D3FD392B406FBAF548971D851DBD1BD9588BD5.cg  FE308A3CB2F6FBE87DB60CF339B6F5DBC0B411C1.cg  GenericShader.frag  GenericShader.vert  GreenShader.frag  GreenShader.vert  (+11 more)
